--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>SheHacksSNG</title>
     
     </head>
-    <body>
+    <body style="background-color:blue;">
         <h1>Gayathry Menon</h1>
         <h2><u>Vision</u></h2>
         <p>I always wanted a platform where I could bring my ideas to life.She Hacks caught my attention and I am super thrilled to be a part of it.Through She Hacks we wish to fully develop our project,reach out to maximum users and make it useful to them.</p>
